Synching the Ethiopic Comma Usage section with the survey.

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
           <figure id="zen_reference_alignment"> <img src="images/Z-N-Alignment.png" alt=""/>
         <figcaption>Z-ን or “Zen” Reference Alignment.</figcaption>
       </figure>
-          <div  class="issues">
+          <div class="issues">
         <p>Issues/Questions:</p>
         <ol>
               <li>What Ethiopic letter should be applied as a height reference point for alignment?</li>
@@ -177,7 +177,7 @@
           <p>Literature produced with a heavier Latin tyepface may represent the author's stylistic sensibilities but in some cases may  only be a
         pragmatic outcome when an author finds manually changing between fonts too burdensome. 
         The view of professional publishers is unknown here and should be determined.</p>
-          <div  class="issues">
+          <div class="issues">
         <p>Issues/Questions:</p>
         <ol>
               <li>When publishing in the classical Ethiopic weight, should English words appear in their default English weight?</li>
@@ -211,7 +211,7 @@
           <figure id="ethiopicized_punctuation_260"> <img src="images/Ethiopicized-Punctuation-Sample-260.png" alt=""/>
         <figcaption>Samples of Ethiopicized punctuation compared to shapes in a companion Latin typeface.</figcaption>
       </figure>
-          <div  class="issues">
+          <div class="issues">
         <p>Issues/Questions:</p>
         <ol>
               <li>Are there any additional western symbols required for Ethiopic writing?</li>
@@ -243,7 +243,7 @@
       </figure>
           <p>As a rule within the embedded foreign script, the weight of punctuation and other symbols (numbers, etc) should be in keeping
         with the weight of the foreign text and not that of the surrounding Ethiopic.</p>
-          <div  class="issues">
+          <div class="issues">
         <p>Issues/Questions:</p>
         <ol>
               <li>What do stakeholders feel should be the default weight for enclosing punctuation?</li>
@@ -326,7 +326,7 @@
           <figure> <img src="images/gemination-heights-comparison.png" alt=" " />
         <figcaption>Two gemination styles compared: typical printed (above) and handwritten (below).</figcaption>
       </figure>
-          <div  class="issues">
+          <div class="issues">
         <p>Issues/Questions:</p>
         <ol>
               <li>What do stakeholders feel should be the default style (fixed, floating)?</li>
@@ -345,7 +345,7 @@
           <figure> <img src="images/isolated-and-joining-numeral-bars.png" alt=" " />
         <figcaption>Two numeral styles compared.</figcaption>
       </figure>
-          <div  class="issues">
+          <div class="issues">
         <p>Issues/Questions:</p>
         <ol>
               <li>What do stakeholders feel should be the default style (joined, isolated)?</li>
@@ -361,7 +361,7 @@
           <figure> <img src="images/numeral-vertical-alignment.png" alt=" " />
         <figcaption>Three vertical alignments compared.</figcaption>
       </figure>
-          <div  class="issues">
+          <div class="issues">
         <p>Issues/Questions:</p>
         <ol>
               <li>Are the vertical alignment rules of Roman or Coptic numerals appropriate (and what are they)?</li>
@@ -383,7 +383,7 @@
     <p>Paragraph indentation is a modern Ethiopic practice.  The initial paragraph of a section is sometimes not indented.  This practice may be
           idiosyncratic to an author but may represent a convention in use by a publishing house.  A best practice supported by stakeholders should be
           established here.</p>
-    <div  class="issues">
+    <div class="issues">
     <p>Issues/Questions:</p>
       <ol>
         <li>How much should a paragraph be indented?</li>
@@ -411,7 +411,7 @@
       <li>A non-terminal or non-joining punctuation (such as  « ‹ “ $ ( [ { ). Conversely, may not start with a terminal or joining punctuation (suchas: ? ! ¡ ።) ] } / % – ” › » ፡ ፣ ፤ ፥ ፦ space, math operators)</li>
     </ul>
 
-    <div  class="issues">
+    <div class="issues">
     <p>Issues/Questions:</p>
       <ol>
         <li>Are the above rules valid?</li>
@@ -424,7 +424,7 @@
   <section id="ethiopic_hyphenation">
     <h3>Hyphenation</h3>
     <p>In classical Ethiopic writing the wordspace separator symbol (፡) negated the need for word hyphenation across a line of text. When wordspace fell out of favor in modern writing the practice of splitting a word across lines of text continued.  The reader would know to mentally reconstruct the word by relying on the knowledge of lexicon and context.</p>
-    <div  class="issues">
+    <div class="issues">
     <p>Issues/Questions:</p>
       <ol>
         <li>When wordspace, “፡”, is used, what rules for splitting a word across lines apply?</li>
@@ -472,7 +472,7 @@
     <section id="justification_with_space">
           <h4>Justification When SPACE is the Word Delimiter</h4>
           <p>When white space (U+0020) is used as the word separator in Ethiopic text, the line spacing rules applicable to western text may be applied to meet user expectations.</p>
-          <div  class="issues">
+          <div class="issues">
         <p>Issues/Questions:</p>
         <ol>
           <li>Is the above assessment correct? Are there any special justification formatting considerations when SPACE is used with Ethiopic text?</li>
@@ -508,7 +508,7 @@
           <figure id="fig_white_space_round_wordspace"> <img src="images/white_space_round_wordspace.png" alt=" " />
         <figcaption> Depiction of white space around Ethiopic wordspace for three modes of text justification.</figcaption>
       </figure>
-        <div  class="issues">
+        <div class="issues">
         <p>Issues/Questions:</p>
         <ol>
           <li>Which spacing style should be the default used by applications?</li>
@@ -522,7 +522,7 @@
           <figure> <img src="images/corpus-samples/KWK-Page-159-Cropped.png" alt=" " width="800" height="297" />
         <figcaption>Justification Sample from  Maṣḥafa Sawāsew, Page 159 (Kifle, 1955 (1948 EC))</figcaption>
       </figure>
-          <div  class="issues">
+          <div class="issues">
         <p>Issues/Questions:</p>
         <ol>
               <li>Does the additional spacing after fullstop apply to other Ethiopic punctuation?  Additional spacing is also seen in the above sample following ETHIOPIC SEMICOLON.</li>
@@ -562,7 +562,7 @@
           <figure id="inline_list_with_spaces"> <img src="images/diamond-bullet-size-samples.png" alt=""/>
         <figcaption>Diamond bullet size relative to letter height.</figcaption>
       </figure>
-          <div  class="issues">
+          <div class="issues">
         <p>Issues/Questions:</p>
         <ol>
               <li>What are the preferred bullet shapes?</li>
@@ -589,7 +589,7 @@
           <h4>Ordered List Item Marker</h4>
           <p>In Ethiopic ordered lists a number of symbols are used for the list marker (suffix).
         For example "፦" , "." , ")" and even "፡" (Ethiopic Wordspace).</p>
-          <div  class="issues">
+          <div class="issues">
         <p>Issues/Questions:</p>
         <ol>
               <li>What are the preferred list marker symbols? What is the best default?</li>
@@ -612,7 +612,7 @@
           <figure id="list_item_marker_marker_justified"> <img src="images/list-aligned-on-suffix.png" alt=""/>
         <figcaption>Alphabetical list aligned on marker.</figcaption>
       </figure>
-          <div  class="issues">
+          <div class="issues">
         <p>Issues/Questions:</p>
         <ol>
               <li>What alignment style(s) do stakeholders desire?</li>
@@ -633,7 +633,7 @@
           <h4>Numbered Lists</h4>
           <p>Ethiopic literature will apply ordered numbered list using both Ethiopic and Western numeral systems. Ethiopic numeral
         lists are addressed in the <a href="https://www.w3.org/TR/css-counter-styles-3/#valdef-counter-style-name-ethiopic-numeric">Ethiopic Numeric Counter Style</a> section of the <a href="https://www.w3.org/TR/css-counter-styles-3/">CSS Counter Styles Level 3</a> specification.</p>
-          <div  class="issues">
+          <div class="issues">
         <p>Issues/Questions:</p>
         <ol>
               <li>What is the list item marker preference with Ethiopic numbers?</li>
@@ -899,7 +899,7 @@
 }
 </pre>
       </div>
-          <div  class="issues">
+          <div class="issues">
         <p>Issues/Questions:</p>
         <ol>
               <li>ቨ appears to be equally included and omitted in ሀለሐመ  lists. Stakeholders should be resolve to include or exclude it, or define two list styles (with and without ቨ).</li>
@@ -1124,7 +1124,7 @@
 }
 </pre>
       </div>
-          <div  class="issues">
+          <div class="issues">
         <p>Issues/Questions:</p>
         <ol>
               <li>ቨ appears to be equally included and omitted in አበገደ lists. Stakeholders should be resolve to include or exclude it, or define two list styles (with and without ቨ).</li>
@@ -1146,7 +1146,7 @@
           <figure id="end_of_list_inlined_paragraph_continuation"> <img src="images/end-of-list-inline-continuation.png"  alt=" " />
         <figcaption>Sample for inlined paragraph continuation at end of list.</figcaption>
       </figure>
-          <div  class="issues">
+          <div class="issues">
         <p>Issues/Questions:</p>
         <ol>
               <li>Is this an older style? Idiosyncratic to a few authors? The desired norm?</li>
@@ -1200,7 +1200,7 @@
     <p style="background-color: #ccffcc">ይህን መጽሐፍ ለመጻፍ ያሰብኩበት ምክንያት የሮማ ልዑካን ባጼ ልብነ ድንግል በሺ፭፻፲፯ ዓ.ም ...</p>
     <h6 style="display: block; color: black; font-size: .67em; font-weight: bold; background-color: #99ccff">አርእስት 6</h6>
     <p style="background-color: #ccffcc">ይህን መጽሐፍ ለመጻፍ ያሰብኩበት ምክንያት የሮማ ልዑካን ባጼ ልብነ ድንግል በሺ፭፻፲፯ ዓ.ም ...</p>
-    <div  class="issues">
+    <div class="issues">
           <p>Issues/Questions:</p>
           <ol>
         <li>Should heading sizes 1 and 2 be centered by default, or should this be left to custom stylesheet?</li>
@@ -1212,7 +1212,7 @@
     <h3>Emphasis Within Prose</h3>
     <p>Within a paragraph, a reference to a book title, or section title is given in italic. Words may also be emboldened to emphasize importance.</p>
     <p>[Examples Needed]</p>
-    <div  class="issues">
+    <div class="issues">
           <p>Issues/Questions:</p>
           <ol>
         <li>How much slant when an italic designed typeface is not available? 10% is suggested.</li>
@@ -1243,7 +1243,7 @@
     <figure id="ecclesiastical_emphasis_sample"> <img src="images/ecclesiastical-emphasis-sample-cropped.jpg" alt=" " width="600"/>
           <figcaption>Ecclesiastical emphasis sample from Maṣḥafa Ṣalot Mes Ser'ate Kiddase Betegreññā, Page 32 (Weldemariam, 1995 (1988 EC))</figcaption>
         </figure>
-    <div  class="issues">
+    <div class="issues">
           <p>Issues/Questions:</p>
           <ol>
         <li>What shade of red?</li>
@@ -1254,7 +1254,7 @@
       <section id="emphasis_with_wordspace">
     <h3>Emphasis With Ethiopic Wordspace</h3>
     <p>As a rule, a wordspace following a word that is emphasized in any way (color, bold, italic, underline, etc.) shall receive the same emphasis. This is in keeping with the Ge'ez literature tradition. </p>
-    <div  class="issues">
+    <div class="issues">
       <p>Issues/Questions:</p>
       <ol>
         <li>Does this rule make aesthetic sense in full justification with wordspace in centered positioning style? In Ge'ez manuscripts no issue arrises since little or no white space appears between the wordspace and boundary words.  The elastic space around wordspace may stretch considerably in typeset documents, under justification, where continuation of the emphasis may appear peculiar after some stretching threshold width.</li>
@@ -1318,7 +1318,7 @@
         <span style="text-decoration: underline;">Multi Word</span><br/>
         <span style="margin-left:40px;"> ጠቅላይ ሚኒስትር ⇒ ጠ/ሚ/ር</span><br/>
         <span style="margin-left:40px;"> ኢትዮጵያ ኦርቶዶክስ ተዋሕዶ ቤተ ክርስቲያን ⇒ ኢ/ኦ/ተ/ቤ/ክ</span> </p>
-          <div  class="issues">
+          <div class="issues">
         <p>Issues/Questions:</p>
         <ol>
               <li>When "." is used as the abbreviation marker, it is sometimes found at the end of the abbreviation.</li>
@@ -1337,7 +1337,7 @@
           <p>An ordinal is formed in Amharic when "ኛ", and in Tigrinya when "ይ", follows a cardinal number.
         The ordinal marker is often, but not always, rendered in superscript form. The superscript practice is most prevalent with ordinals
         in western numerals, but is also applied with Ethiopic numerals.</p>
-          <div  class="issues">
+          <div class="issues">
         <p>Issues/Questions:</p>
         <ol>
               <li>What letters should be superscripted, and it what contexts? For example, "ሳ" and "ብር" may also be superscripted in
@@ -1376,6 +1376,14 @@
         <dt>, - comma</dt>
         <dd><span class="uname">U+002C COMMA</span> is utilized in Eritrean and Ethiopian writing practices in the formatting of western numbers only.</dd>
       </dl>
+          <div class="issues">
+            <p>Issues/Questions:</p>
+              <ol>
+                <li>Are the above descriptions correct?</li>
+                <li>Should authors be able to set a default comma (፣,፥,፡) in software?</li>
+                <li>Should authors be able to set a default space symbol in software?</li>
+              </ol>
+          </div>
         </section>
     <section id="wordspace_in_comma_context">
           <h3>Ethiopic Wordspace in the Context of Comma</h3>
@@ -1384,7 +1392,7 @@
           <figure> <img src="images/corpus-samples/Nebiy-Mohammed-Page-35-Cropped.png" alt=" " width="800" height="540"/>
         <figcaption>Ethiopic Wordspace in the context of comma (Itedalewe, 1987 (1979 EC))</figcaption>
       </figure>
-          <div  class="issues">
+          <div class="issues">
         <p>Issues/Questions:</p>
         <ol>
               <li>Should comma context be a user preference?</li>
@@ -1396,7 +1404,7 @@
           <h3>Parenthetical Expressions</h3>
           <p>Parenthetical expressions are found regularly in modern Ethiopic writing and will apply any of the enclosing symbol pairs:
         // , () and [].</p>
-          <div  class="issues">
+          <div class="issues">
         <p>Issues/Questions:</p>
         <ol>
               <li>What are the preferred parenthetical enclosing symbol pairs for modern writing?</li>
@@ -1420,7 +1428,7 @@
             </ol>
         <p>The identical scenarios are likewise found with Ethiopic wordspace in the presence of a closing quotation mark and must also be addressed. </p>
       </section>
-          <div  class="issues">
+          <div class="issues">
         <p>Issues/Questions:</p>
         <ol>
               <li>Which of the above two forms is considered most appropriate?</li>
@@ -1435,7 +1443,7 @@
         Modern Ethiopic writing will additionally utilize Latin quotation marks similarly (“ ” ‘ ’, U+201C, U+201D, U+2018, U+2019). 
         The choice of Latin script quotation may represent either an author preference or a software limitation that made guillemets
         unavailable or difficult to access.</p>
-          <div  class="issues">
+          <div class="issues">
         <p>Issues/Questions:</p>
         <ol>
               <li>What are the preferred quotation marks for modern Ethiopic literature?</li>
@@ -1451,7 +1459,7 @@
           <h3>Ellipsis</h3>
           <p>Both pre-composed and mid-line ellipsis are found in Ethiopic literature. The presence of one over the other may simply be an
         artifact of the publishing technology and not necessarily in line with the publisher's preference.</p>
-          <div  class="issues">
+          <div class="issues">
         <p>Issues/Questions:</p>
         <ol>
               <li>Which ellipsis form is the preferred as the default?</li>
@@ -1495,7 +1503,7 @@
           An example:
           <div class="example" id="-example"> &nbsp;&nbsp;&nbsp;&nbsp;
         ደረጀ ገብሬ፤ ሚያዝያ 1996፤ <i>ተግባራዊ፡የጽህፈት፡መማሪያ።</i> ንግድ ማተሚያ ድርጅት፤ አዲስ አበባ። </div>
-          <div  class="issues">
+          <div class="issues">
         <p>Issues/Questions:</p>
         <ol>
               <li>Does the Ethiopian Writer's Association endorse any conventions for media citation?</li>
