Updates to section "Rules of Applying Whitespace in Ethiopic Text".

--- a/index.html
+++ b/index.html
@@ -430,44 +430,53 @@
         <li>When wordspace, “፡”, is used, what rules for splitting a word across lines apply?</li>
         <li>When space is used, should Ethiopic writing use a hyphen “‐” to split words across lines?</li>
         <li>When space is used, and if words should be split across lines (with or without a hyphen), are the following rules for word splitting suitable?
-    <ul>
-      <li>Words are split at a morpheme boundary, for example: ቤተ‐<br/>መንግሥት . </li>
-      <li>Words are split along a syllable boundary.</li>
-      <li>Words of a single syllable are not split over lines.</li>
-      <li>Words are split after a prefix.</li>
-      <li>Words are split before a suffix.</li>
-      <li>Numbers are not split over lines.</li>
-      <li>Words of two letters are not split over lines.</li>
-    </ul>
+          <ul>
+            <li>Words are split at a morpheme boundary, for example: ቤተ‐<br/>መንግሥት . </li>
+            <li>Words are split along a syllable boundary.</li>
+            <li>Words of a single syllable are not split over lines.</li>
+            <li>Words are split after a prefix.</li>
+            <li>Words are split before a suffix.</li>
+            <li>Numbers are not split over lines.</li>
+            <li>Words of two letters are not split over lines.</li>
+          </ul>
         </li>
       </ol>
-        </div>
+    </div>
   </section>
 
-      <section id="ethiopic_wordspace_format">
+  <section id="ethiopic_wordspace_format">
     <h3>Formatting of Ethiopic Wordspace</h3>
-    <section id="ethiopic_wordspace_punctuation_boundary_rules">
-          <h4>Rules of Formatting the Ethiopic Wordspace-Punctuation Boundary</h4>
-          <p><em>This section has become redundant and should be combined with <a href="#ethiopic_wordspace_at_latin_boundaries">Ethiopic Wordspace at Latin Boundaries</a></em></p>
-        </section>
+    <section id="ethiopic_wordspace_boundary_rules">
+      <h4>Symbols Preceding and Following Ethiopic Wordspace</h4>
+      <p><em>TBD</em></p>
+    </section>
+
     <section id="ethiopic_whitespace_rules">
-          <h4>Rules of Applying Whitespace in Ethiopic Text</h4>
-          <p class="issues">The intent of this section is to discuss when white space (and what width) can be added  to documents using Ethiopic wordspace.
-        Examples of when this is found to occur (some of these topics are discussed elsewhere):</p>
-          <ul>
-        <li>indentation</li>
-        <li>following a list item marker</li>
-        <li>within a numeric sequence, like a phone number</li>
-        <li>within a date format (sometimes, not always)</li>
-        <li>within a scripture reference (sometimes not always)</li>
-        <li>before and following quotation marks</li>
-        <li>following an ellipsis (?)</li>
-        <li>within a block of embedded foreign script</li>
+      <h4>Rules of Applying Whitespace in Ethiopic Text</h4>
+      <p>When Ethiopic Wordspace (፡) is used to separate words, there may still be some valid application for white space “ ”. White space is permittable to support the following formatting needs:</>
+      <ul>
+        <li>Indentation.</li>
+        <li>Following a list item marker.</li>
+        <li>Within a numeric sequence, like a phone number.</li>
+        <li>Within a date format (sometimes, not always).</li>
+        <li>Within a scripture reference (sometimes not always).</li>
+        <li>Before and following quotation marks.</li>
+        <li>Following an ellipsis (?).</li>
+        <li>Within a block of embedded foreign script.</li>
       </ul>
-          <p><em>[image samples needed]</em></p>
-        </section>
+      <p><em>[image samples needed]</em></p>
+      <div class="issues">
+      <p>Issues/Questions:</p>
+        <ol>
+          <li>Are the above rules valid?</li>
+          <li>For the above cases where white space is valid, can the spacing width rules applied for Latin text be applied for Ethiopic?</li>
+        </ol>
+      </div>
+    </section>
   </section>
-      <section id="ethiopic_justification">
+
+
+  <section id="ethiopic_justification">
     <h3>Justification</h3>
     <section id="justification_with_space">
           <h4>Justification When SPACE is the Word Delimiter</h4>
