Added missing "/" to the Ordered List Item Marker section.

--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
     <section id="list_item_marker">
           <h4>Ordered List Item Marker</h4>
           <p>In Ethiopic ordered lists a number of symbols are used for the list marker (suffix).
-        For example "፦" , "." , ")" and even "፡" (Ethiopic Wordspace).</p>
+             For example: "/" , "፦" , "." , ")" and even "፡" (Ethiopic Wordspace).</p>
           <div class="issues">
         <p>Issues/Questions:</p>
         <ol>
