--- a/index.html
+++ b/index.html
@@ -403,12 +403,12 @@
   </section>
       <section id="ethiopic_line_breaking">
     <h3>Line Breaking</h3>
-    <p>Word processors and text readers such as web browsers, ebook devices, etc. will automatically format the sentences of a paragraph over a number of lines as allowable by the available width of the viewing area.  These software systems apply formatting rules that govern where how a line may end and a new line begin.  Line breaking rules for Ethiopic are expressed with rules for how a line may start. A line may start with:</p>
+    <p>Word processors and text readers such as web browsers, eBook devices, etc. will automatically format the sentences of a paragraph over a number of lines as allowable by the available width of the viewing area.  These software systems apply formatting rules that govern where how a line may end and a new line begin.  Line breaking rules for Ethiopic are expressed with rules for how a line may start. A line may start with:</p>
     <ul>
       <li>A letter.</li>
       <li>A number.</li>
       <li>A tag.</li>
-      <li>A non-terminal or non-joining punctuation (such as  « ‹ “ $ ( [ { ). Conversely, may not start with a terminal or joining punctuation (suchas: ? ! ¡ ።) ] } / % – ” › » ፡ ፣ ፤ ፥ ፦ space, math operators)</li>
+      <li>A non-terminal or non-joining punctuation (such as  « ‹ “ $ ( [ { ). Conversely, may not start with a terminal or joining punctuation (such as: ? ! ¡ ።) ] } / % – ” › » ፡ ፣ ፤ ፥ ፦ space, math operators)</li>
     </ul>
 
     <div class="issues">
@@ -1466,7 +1466,7 @@
         </section>
     <section id="ellipsis">
           <h3>Ellipsis</h3>
-          <p>Both pre-composed and mid-line ellipsis are found in Ethiopic literature. The presence of one over the other may simply be an
+          <p>Both pre-composed and mid-line ellipses are found in Ethiopic literature. The presence of one over the other may simply be an
         artifact of the publishing technology and not necessarily in line with the publisher's preference.</p>
           <div class="issues">
         <p>Issues/Questions:</p>
