--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
     <title>Ethiopic Layout Requirements</title>
+    <link rel="stylesheet" href="AbyssinicaSIL-webfont-example.css" type="text/css">
     <meta charset="utf-8"/>
     <script src="https://www.w3.org/Tools/respec/respec-w3c-common"
             async class="remove"></script>
