Updates to the Pages section in the index.html and Documents section in the survey.

--- a/index.html
+++ b/index.html
@@ -1280,8 +1280,10 @@ Incorrect: … ፅፋት፡(ፅፍዓት፡)፡ከመ፡ኪደተ፡ንስር፡
       <p><em>Discuss: Basic common templates, Page elements, Page-level directionality, Bidirectional characteristics, Arrangement of elements, Text columns, Header, Footer, Illustrations, Tables, Page numbers, Margins, Positioning and arrangement of content, Pagination rules, Specimens and examples.</em></p>
       <p><em>Page and section numbering can be discussed here.  The user (author) should be to set the numeral system with a CSS attribute. A tool tip to 
         over an ethiopic page number that presents the western equivalent would be useful.  Are there any rules on page number position?</em></p>
-      <p><em>Page margin differences?  A special case: many religious books have an extra large lower margin to make it easier to hold the book with two hands
-        while not obscuring the text (i.e. the 1-2-4 margin rule).</em></p>
+      <p>Proper document layout is very import for religious works in the Ge’ez traditions. Certain works like homiliaries (such as ድርሳነ፡ሚካኤል) are consistently formatted in two columns and the Synaxarium (መጽሐፈ፡ስንክሳር) in three.  Margins in this class of literature will most common exhibit a 1x2x4 ratio where the top and fore edge margins are twice that of the gutter and half that of the bottom (depicted in the following figure).</p>
+      <figure> <img src="images/GeezMargins.png" alt=" "/>
+        <figcaption>Page margins in Ge’ez literature.</figcaption>
+      </figure>
       <section id="h_preface_page_numbering">
     <h3>Preface Page Numbering</h3>
     <p><em>Note the practice of using two numeral systems for page numbering in books.  For example in preface paging Ethiopic numerals may be used in documents where page numbers use western numerals.  This is analagous to the practice in western literature of using Roman numerals in preface numbering and western numerals afterwards. A general statement should be made in this document that Ethiopic Numerals should Replace Roman Numerals where the later is a default.</em></p>
